fix: corrigidos bugs de projetos e adicionados mais funcionalidades

--- a/RPG-TESTE.Api/appsettings.Development.json
+++ b/RPG-TESTE.Api/appsettings.Development.json
@@ -1,4 +1,15 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=postgres;Password=Andraus66?;Host=localhost;Port=8888;Database=ANDRAUSPROJETO"
+  },
+  "Jwt": {
+    "Secret": "",
+    "Issuer": "",
+    "Audience": "",
+    "ExpirationMinutes": 60
+  },
+  "DatabaseProvider": "PostgreSql",
+  "DocumentationProvider": "Scalar",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
