feat: novas funções de desenvolvimento

--- a/RPG-TESTE.Api/RPG-TESTE.Api.csproj
+++ b/RPG-TESTE.Api/RPG-TESTE.Api.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RPG-TESTE.Application\RPG-TESTE.Application.csproj" />
     <ProjectReference Include="..\RPG-TESTE.Domain\RPG-TESTE.Domain.csproj" />
 	<ProjectReference Include="..\RPG_TESTE.Infrastructure\RPG_TESTE.Infrastructure.csproj" />
 
