--- a/RPG-TESTE.Application/RPG-TESTE.Application.csproj
+++ b/RPG-TESTE.Application/RPG-TESTE.Application.csproj
@@ -7,4 +7,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="12.0.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="2.3.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RPG_TESTE.Infrastructure\RPG_TESTE.Infrastructure.csproj" />
+	  <ProjectReference Include="..\RPG-TESTE.Domain\RPG-TESTE.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
