--- a/RPG_TESTE.Infrastructure/RPG_TESTE.Infrastructure.csproj
+++ b/RPG_TESTE.Infrastructure/RPG_TESTE.Infrastructure.csproj
@@ -1,13 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RPG-TESTE.Domain\RPG-TESTE.Domain.csproj" />
+	  <ProjectReference Include="..\RPG-TESTE.Application\RPG_TESTE.Application.csproj" />
+	  <ProjectReference Include="..\RPG-TESTE.Domain\RPG_TESTE.Domain.csproj" />
    
   </ItemGroup>
 
