--- a/RPG-TESTE.Api/appsettings.Development.json
+++ b/RPG-TESTE.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=Andraus66?;Host=localhost;Port=8888;Database=ANDRAUSPROJETO"
+    "DefaultConnection": "User ID=postgres;Password=Andraus66?;Host=localhost;Port=8888;Database=ANDRAUSPROJETO2"
   },
   "Jwt": {
     "Secret": "",
