Revert "feat: adicionados funcionalidades novas, Fix: resolvido problema com o db, erros no get class"
This reverts commit 49d071f6cfa4e9ae5e219b695e465423ea49b134.

--- a/RPG-TESTE.Api/appsettings.Development.json
+++ b/RPG-TESTE.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=Andraus66?;Host=localhost;Port=8888;Database=ANDRAUSPROJETO2"
+    "DefaultConnection": "User ID=postgres;Password=Andraus66?;Host=localhost;Port=8888;Database=ANDRAUSPROJETO"
   },
   "Jwt": {
     "Secret": "",
