--- a/RPG_TESTE.Infrastructure/RPG_TESTE.Infrastructure.csproj
+++ b/RPG_TESTE.Infrastructure/RPG_TESTE.Infrastructure.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="FluentMigrator" Version="7.1.0" />
     <PackageReference Include="FluentMigrator.Runner" Version="7.1.0" />
     <PackageReference Include="FluentMigrator.Runner.Postgres" Version="7.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.9" />
   </ItemGroup>
 
 </Project>
